# ccptools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _sandbox.py  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  unit-test.yml
ccptools/: __init__.py
ccptools/_common/: __init__.py  _decode.py
ccptools/dtu/: README.md  __init__.py
ccptools/dtu/casting/: __init__.py  _any.py  _filetime.py  _instant.py  _string.py  _timestamp.py
ccptools/dtu/formatting/: __init__.py  _delta.py  _serialize.py
ccptools/dtu/parsers/: __init__.py  _string.py  _timedelta.py
ccptools/dtu/shortcuts/: __init__.py  _aliases.py  _checkers.py  _finders.py
ccptools/dtu/structs/: __init__.py  _base.py  _deltasplit.py  _types.py  aliases.py  consts.py
ccptools/legacyapi/datetimeutils/: __init__.py  _deltasplit.py  _find.py  _timestamp.py
ccptools/legacyapi/typeutils/: __init__.py  bases.py  casting.py  comparison.py  empty.py  insp.py  iters.py  metas.py  sentience.py  size.py  strimp.py  string.py
ccptools/structs/: __init__.py  _base.py
ccptools/tpu/: README.md
ccptools/tpu/casting/: __init__.py  _currency.py  _evals.py  _ip.py  _mask.py  _params.py  _serialize.py
ccptools/tpu/comparison/: __init__.py  (+1 more)
tests/datetimeutils/: test_datetimeutils.py  test_deltasplit.py  test_filetime.py  test_finders.py  test_instant.py  test_legacy_datetimeutils.py  test_timestamp.py
tests/typeutils/: test_any_getter.py  test_eval_enum.py  test_group_by.py  test_legacy_typeutils.py  test_legacy_typeutils_bases.py  test_legacy_typeutils_casting.py  test_legacy_typeutils_empty.py  test_legacy_typeutils_insp.py  test_legacy_typeutils_iters.py  test_legacy_typeutils_nested_getter.py  test_legacy_typeutils_sentient_object.py  test_legacy_typeutils_strimp.py  test_legacy_typeutils_string.py  test_legacy_typeutils_typecheck.py  test_serializer.py
(+34 files in other folders)
